--- a/localisation/countries_l_english.yml
+++ b/localisation/countries_l_english.yml
@@ -691,3 +691,10 @@
 
  ZAK:0 "Zakarturi Empire"
  ZAK_ADJ:0 "Zakarturi"
+
+ VIN:0 "Vinalion"
+ VIN_ADJ:0 "Vinalien"
+ COI:0 "Confinia"
+ COI_ADJ:0 "Confinian"
+ PHI:0 "Philippia"
+ PHI_ADJ:0 "Philippian"
