--- a/localisation/TD_02_decision_nations_l_english.yml
+++ b/localisation/TD_02_decision_nations_l_english.yml
@@ -84,3 +84,12 @@
 
  zakarturi_nation_title:0 "Restore Zakarturi Empire @ZAK"
  zakarturi_nation_desc:0 ""
+
+ confinia_nation_title:0 "Establish Confinia @COI"
+ confinia_nation_desc:0 ""
+
+ philippia_nation_title:0 "Establish Philippia @PHI"
+ philippia_nation_desc:0 ""
+
+ vinalion_nation_title:0 "Establish Vinalion @VIN"
+ vinalion_nation_desc:0 ""
