--- a/localisation/TD_prov_modifiers_l_english.yml
+++ b/localisation/TD_prov_modifiers_l_english.yml
@@ -15,6 +15,11 @@
  kidinare_estuary_modifier:0 "Kidinare Estuary"
  fadi_estuary_modifier:0 "Fadi Estuary"
  rasus_estuary_modifier:0 "Rasus Estuary"
+ envase_estuary_modifier:0 "Envase Estuary"
+ didisys_estuary_modifier:0 "Didisys Estuary"
+ habruz_estuary_modifier:0 "Habruz Estuary"
+ talamgalt_estuary_modifier:0 "Talamgalt Estuary"
+ moorfluss_estuary_modifier:0 "Moorfluss Estuary"
 
  uzkolian_toll:0 "Uzkolian Toll"
  hre_imperial_road:0 "Imperial Road"
