--- a/localisation/prov_names_l_english.yml
+++ b/localisation/prov_names_l_english.yml
@@ -389,10 +389,10 @@
  PROV388:0 "Cesmont"
  PROV389:0 "Retonoe"
  PROV390:0 "Brecue"
- PROV391:0 "391"
- PROV392:0 "392"
+ PROV391:0 "Defaile"
+ PROV392:0 "Posague"
  PROV393:0 "Monne"
- PROV394:0 "394"
+ PROV394:0 "Tovcapia"
  PROV395:0 "Paifort"
  PROV396:0 "Raçinard"
  PROV397:0 "Vejosiai"
@@ -480,13 +480,13 @@
  PROV479:0 "Anuevu"
  PROV480:0 "Bogcous"
  PROV481:0 "Lybaux"
- PROV482:0 "482"
+ PROV482:0 "Ginozopont"
  PROV483:0 "Diavasan Bay"
- PROV484:0 "484"
- PROV485:0 "485"
- PROV486:0 "486"
+ PROV484:0 "Niraport"
+ PROV485:0 "Visicroix"
+ PROV486:0 "Sadobourg"
  PROV487:0 "Coast of Cleidemni"
- PROV488:0 "488"
+ PROV488:0 "Milloponte"
  PROV489:0 "Nekody"
  PROV490:0 "Martefaz"
  PROV491:0 "Dreckburg"
@@ -520,7 +520,7 @@
  PROV519:0 "Brauberg"
  PROV520:0 "Sprechtwald"
  PROV521:0 "Altstadt am Grüne"
- PROV522:0 ""
+ PROV522:0 "Bradiw"
  PROV523:0 "Geoberic coast"
  PROV524:0 "Geschen"
  PROV525:0 "Waldsee"
@@ -960,7 +960,7 @@
  PROV959:0 "Roineus"
  PROV960:0 "Boune"
  PROV961:0 "Demauax"
- PROV962:0 "962"
+ PROV962:0 "Sonmontagna"
  PROV963:0 "Melien"
  PROV964:0 "Sahlabadi Coast"
  PROV965:0 "Creval"
