--- a/localisation/countries_l_english.yml
+++ b/localisation/countries_l_english.yml
@@ -655,7 +655,7 @@
  PAA:0 "Pamapoikia"
  PAA_ADJ:0 "Pamapoikian"
 
- SIS:0 "Secundum Imperium Saelianum"
+ SIS:0 "The Second Empire"
  SIS_ADJ:0 "Imperial"
  HES:0 "Hestan"
  HES_ADJ:0 "Hestani"
