trade node changes + lippstadt compromise

--- a/localisation/TD_01_flavour_saelian_l_english.yml
+++ b/localisation/TD_01_flavour_saelian_l_english.yml
@@ -147,6 +147,15 @@
  SE_incident.15.t:0 "The Aftermath"
  SE_incident.15.desc:0 ""
  SE_incident.15.a:0 "Very well."
+ SE_incident.16.t:0 "Lippstadt Compromise"
+ SE_incident.16.desc:0 ""
+ SE_incident.16.a:0 "We should negotiate for the good of the Empire."
+ SE_incident.16.b:0 "Outrageous! We will crush them."
+ SE_incident.16.tt:0 "We will try to negotiate a white peace with the tetrarchy.\nIf They accept:"
+ SE_incident.17.t:0 "Lippstadt Compromise"
+ SE_incident.17.desc:0 ""
+ SE_incident.17.a:0 "We should negotiate for the good of the Empire."
+ SE_incident.17.b:0 "Outrageous! We will crush them."
  cb_imperial_domination:0 "Imperial Domination"
  cb_imperial_domination_desc:0 "We can show who is the true ruler of the Empire."
  wg_imperial_domination:0 "Imperial Domination"
