--- a/localisation/TD_tradenodes_l_english.yml
+++ b/localisation/TD_tradenodes_l_english.yml
@@ -8,7 +8,7 @@
  nifthem_tradenode:0 "Nifthem"
  ehrenia_tradenode:0 "Ehrenia"
  indrigerland_tradenode:0 "Indrigerland"
- blue_sea_tradenode:0 "Blue Sea"
+ tummland_tradenode:0 "Tummland"
  uzkolia_tradenode:0 "Uzkolia"
  syvametsa_tradenode:0 "Syvämetsä"
  chilverchia_tradenode:0 "Chilverchia"
