numerous namelists + loc

--- a/localisation/TD_01_flavour_eneratian_l_english.yml
+++ b/localisation/TD_01_flavour_eneratian_l_english.yml
@@ -28,3 +28,10 @@
  decision_claim_eneratian_emperorship_desc:0 "Thanks to the absence of the current Eneratian Emperor, our [Root.Monarch.GetTitle] might bid for this prestigious title."
  emperor_absent_tt:0 "No Ruler is currently claiming the Emperorship"
  claim_emperorship_button_tt:0 "Claim Emperorship"
+
+ ambrosians_ho:0 "Ambrosian Order"
+ ambrosians_ho_desc:0 "Order of Saint Ambrosious is one of the most powerful orders in Chilverchia. Their immense wealth has allowed them to aquire and build many exquisite castles and palaces across the countryside."
+ elophidians_ho:0 "Elophidian Order"
+ elophidians_ho_desc:0 "Originating from Elohpidea in Pamkusea, this order maintains many holdings across the panourgian basin, allowing them to control trade in these areas."
+ rescapians_ho:0 "Rescapian Order"
+ rescapians_ho_desc:0 "This order was founded by a group of terolian monks, whose sole purpose was the treatment of wounded soldiers and civilians."
