--- a/localisation/TD_prov_modifiers_l_english.yml
+++ b/localisation/TD_prov_modifiers_l_english.yml
@@ -25,4 +25,5 @@
  hre_imperial_road:0 "Imperial Road"
  mezonian_toll:0 "Mezonian Toll"
  WGH_quarters:0 "WGH Quarters"
+ desc_WGH_quarters:0 "Wedlanska Gildija Handlowa owns many quarters in this province."
  WGH_trade_power:0 "WGH Quarters"
