generic SE missions - draft 1

--- a/localisation/countries_l_english.yml
+++ b/localisation/countries_l_english.yml
@@ -242,6 +242,8 @@
  LIM_ADJ:0 "Limstadter"
  HOH:0 "Hoherfels"
  HOH_ADJ:0 "Hoherfelser"
+ MUR:0 "Muros"
+ MUR_ADJ:0 "Murosian"
  KRI:0 "Kriegerstein"
  KRI_ADJ:0 "Kriegersteiner"
  MED:0 "Medigrüd"
