--- a/localisation/government_names_l_english.yml
+++ b/localisation/government_names_l_english.yml
@@ -28,6 +28,7 @@
  CHIEF:0 "Chief"
  CHIEFTESS:0 "Chieftess"
  JINONG:0 "Jinong"
+ REIS:0 "Reis"
  KHAN:0 "Khan"
  KHATUN:0 "Khatun"
  KHANUM:0 "Khanum"
