--- a/localisation/TD_cultures_l_english.yml
+++ b/localisation/TD_cultures_l_english.yml
@@ -112,7 +112,7 @@
  vetican:0 "Vetican"
  chofeudian:0 "Chofeudian"
 
- mubahi_group:0 "Muzbahi"
+ muzbahi_group:0 "Muzbahi"
  hafani:0 "Hafani"
  musatemaran:0 "Musatemaran"
  pusgivah:0 "Pusgivah"
