--- a/localisation/countries_l_english.yml
+++ b/localisation/countries_l_english.yml
@@ -280,6 +280,8 @@
  ANS_ADJ:0 "Ansgarlander"
  NRD:0 "Nordmark"
  NRD_ADJ:0 "Nordmarker"
+ FLD:0 "Felderia"
+ FLD_ADJ:0 "Felder"
 
  BOH:0 "Bohemia"
  BOH_ADJ:0 "Bohemian"
