--- a/localisation/TD_01_flavour_felder_l_english.yml
+++ b/localisation/TD_01_flavour_felder_l_english.yml
@@ -11,13 +11,13 @@
  TD_Form_Felderia_title:0 "Unite Felderia"
  TD_Form_Felderia_desc:0 ""
  
- fld_minor_found_felderstadt_tt:0 "Random province that fulfills the mission requirements will get the following:"
+ fld_minor_found_felderstadt_tt:0 "If §YFelderstadt§! doesn't exists, random province meeting the requirements will get"
  fld_minor_controls_cored_felderstadt_tt:0 "Owns core province: §YFelderstadt§!"
- fld_minor_conquered_felderstadt_tt:0 "\nAlternatively, if §YFelderstadt§! was already §Rfounded§!, and §Gconquered§! by us, it will get the following:"
+ fld_minor_conquered_felderstadt_tt:0 "\nIf §YFelderstadt§! already exists, then"
  fld_minor_move_capital_to_felderstadt_tt:0 "§YFelderstadt§! will become the new Capital"
- fld_minor_if_bogil_at_war_tt:0 "If we are at §RWar§! with @BOG §YBogiland§!:"
- fld_minor_if_bogil_was_at_war_tt:0 "If we §Gwon a War§! with @BOG §YBogiland§!:"
- fld_minor_if_bogil_is_dead_tt:0 "\nAlternatively, we will gain the following:"
+ fld_minor_if_bogil_at_war_tt:0 "If we are at War with @BOG §YBogiland§!:"
+ fld_minor_if_bogil_was_at_war_tt:0 "If we won a War with @BOG §YBogiland§!, or conquered 8 provinces with §YBogilish§! culture:"
+ fld_minor_felderstadt_choose_trade_good_tt:0 "We will get an option to choose trade good in §YFelderstadt§!."
  fld_minor_controls_21dev_felderstadt_tt:0 "The city of §YFelderstadt§! must be our capital, and have atleast §Y21 development§!."
  TD_Felder_Forest_Tactics:0 "Forest Warfare"
  TD_Felder_Integrate_The_Kaposnicy:0 "Integration of the Kaposnicy"
@@ -25,5 +25,9 @@
  TD_Felder_centralisation_efforts:0 "Felderia Centralisation Efforts"
  felderia.1.t:0 "Unification of Felderia"
  felderia.1.desc:0 "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.\nLorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.\nLorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."
- felderia.1.a:0 "Unite @FLD §YFelderia§!"
+ felderia.1.a:0 "Unite Felderia @FLD"
  felderia.1.b:0 "We cannot abandon our roots!"
+ felderia.2.t:0 "Felderstadt and it's production"
+ felderia.2.a:0 "Glass"
+ felderia.2.b:0 "Cloth"
+ felderia.2.c:0 "Paper"
