--- a/localisation/TD_01_flavour_aqerb_l_english.yml
+++ b/localisation/TD_01_flavour_aqerb_l_english.yml
@@ -3,6 +3,7 @@
  restore_rouvian_glory_desc:0 "Desc"
 
  acerb_new_march:0 "New March"
+ desc_acerb_new_march:0 "Our ruler was recently granted these lands, for which he is forever grateful."
 
  estate_nobles_yermic_frontier:0 "Yermic Frontier"
  estate_nobles_yermic_frontier_desc:0 "After stabilizing his realm, king Enrique II moved on to 'stabilize' realms of neighboring yermic states. To make the conquest and control over his court easier, he granted the land to his most skillful knights and counts."
