--- a/localisation/TD_regions_l_english.yml
+++ b/localisation/TD_regions_l_english.yml
@@ -37,7 +37,7 @@
  lamedin_region:0 "Lamedin"
  cassidy_valley_region:0 "Cassidy Valley"
  tarhia_region:0 "Tarhia"
- lower_moorfluus_region:0 "lower Moorfluss"
+ lower_moorfluss_region:0 "lower Moorfluss"
  eastern_chantlian_coast_region:0 "Mathilda's Bay"
  northern_niheyan_ocean:0 "Northern Niheyan Ocean"
  western_niheyan_ocean:0 "Western Niheyan Ocean"
