--- a/localisation/emperor_content_l_english.yml
+++ b/localisation/emperor_content_l_english.yml
@@ -3291,9 +3291,9 @@
  trade_company_polynesia:0 "Pacific Charter"
  hirde_to_pope_tt:0 "The Pope has won a war while hiring Swiss condottiere"
  wine_bonus_prod:0 "Wine Production Bonus"
- #desc_wine_bonus_prod:0 "Our breweries are boosting the production of Wine in this province." not only breweries now
+ desc_wine_bonus_prod:0 "This province benefits from increased effectiveness of wine production."
  grain_bonus_prod:0 "Grain Production Bonus"
- #desc_grain_bonus_prod:0 "Our breweries are boosting the production of Grain in this province."
+ desc_grain_bonus_prod:0 "This province benefits from increased effectiveness of grain production."
  italian_wars_flag_tt:0 "The Italian Wars are active"
  knights_templar_flag:0 "Has unlocked the Knights Templar Mercenary Company"
  no_new_mercs_tt:0 "European mercenaries have not yet adopted new tactics"
