--- a/localisation/TD_01_flavour_liemarian_l_english.yml
+++ b/localisation/TD_01_flavour_liemarian_l_english.yml
@@ -10,7 +10,7 @@
  liemarian.2.b:0 "You want MY land?!"
  liemarian.2.c:0 "They shall grant us whatever we need. (Play as The Episcopate)"
  seat_of_episcopate:0 "Seat of Episcopus Maximus"
- seat_of_episcopate_desc:0 "This is the province from which the Episcopus Maximus himself rules over all of liemarian faith."
+ desc_seat_of_episcopate:0 "This is the province from which the Episcopus Maximus himself rules over all of liemarian faith."
  liemarian.3.t:0 "Spread of a new faith"
  liemarian.3.desc:0 "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."
  liemarian.3.a:0 "Maybe they are right..."
