--- a/localisation/TD_01_flavour_kakigia_l_english.yml
+++ b/localisation/TD_01_flavour_kakigia_l_english.yml
@@ -1,5 +1,6 @@
 ﻿l_english:
  consolidate_the_steppe:0 "Consolidate the Steppe"
+ desc_consolidate_the_steppe:0 "Our horde has ambitions to unite the entire steppe."
  settlers_pushed_back:0 "Settlers Pushed Back"
 
  lounavaki_march_ideas:0 "Valvur Ideas"
