--- a/localisation/TD_bookmarks_l_english.yml
+++ b/localisation/TD_bookmarks_l_english.yml
@@ -16,3 +16,6 @@
 
  TAEDIUM_HESTAN_BOOKMARK_TITLE:0 "Hestani Stagnation"
  TAEDIUM_HESTAN_BOOKMARK_DESC:0 ""
+
+ TAEDIUM_PAQIVAZ_BOOKMARK_TITLE:0 "Highway of Civilization"
+ TAEDIUM_PAQIVAZ_BOOKMARK_DESC:0 ""
