--- a/localisation/TD_01_flavour_kakigia_l_english.yml
+++ b/localisation/TD_01_flavour_kakigia_l_english.yml
@@ -20,3 +20,5 @@
  lounavaki_autocratic_rule_desc:0 "Due to our expansive nature, order always must have been mantained by a single powerful individual. This has preserved in our cultural tradition to this day." 
  lounavaki_adapt_and_improve:0 "Adapt and Improve"
  lounavaki_adapt_and_improve_desc:0 "Prolonged contact with the people of the steppes has made our soldiers and leaders more experienced in fighting against them. Many even adopt their tactics but changa and improve them - laskurian hussars are known for their use of muskets while also terrifying the enemy with their fierece mounts."
+
+ settled_horde_no_federation_tt:0 "Steppe hordes cannot join federations."
