--- a/localisation/TD_areas_l_english.yml
+++ b/localisation/TD_areas_l_english.yml
@@ -231,7 +231,7 @@
  bailthuaidh_area:0 "Bailthuaidh"
  east_ende_area:0 "East Ende"
  eastern_oileamor_area:0 "Eastern Oileamor"
- western_oileamor_area:0 "Eastern Oileamor"
+ western_oileamor_area:0 "Western Oileamor"
  anginneowu_area:0 "Anginneowu"
  aideich_area:0 "Aideich"
 
