rulers formable some other stuff

--- a/localisation/TD_areas_l_english.yml
+++ b/localisation/TD_areas_l_english.yml
@@ -332,3 +332,11 @@
  middle_oyria_area:0 "Middle Oyria"
  upper_oyria_area:0 "Upper Oyria"
  rakabani_highlands_area:0 "Rakabani Highlands"
+
+ barahan_area:0 "Barahan"
+ dakhal_area:0 "Dakhal"
+ sawdagun_area:0 "Sawdagun"
+ samadar_area:0 "Samadar"
+ senevasman:0 "Senevasman"
+ southern_tarascan_srea:0 "Southern Tarascan"
+ garamarz_area:0 "Garamarz"
