--- a/localisation/TD_cultures_l_english.yml
+++ b/localisation/TD_cultures_l_english.yml
@@ -6,7 +6,6 @@
  riyadunic:0 "Riyadunic"
  altaqadimi:0 "Altaqadimi"
  antawilian:0 "Antawilian"
- lamedinian:0 "Lamedinian"
 
  pohjoista_group:0 "Pohjoista"
  uzkolian:0 "Uzkolian"
@@ -118,12 +117,15 @@
  hafani:0 "Hafani"
  musatemaran:0 "Musatemaran"
  pusgivah:0 "Pusgivah"
+ lamedinian:0 "Lamedinian"
+ frankrani:0 "Frankrani"
 
  almurtafan_group:0 "Almurtafan"
  sefertian:0 "Sefertian"
 
  mesutian_group:0 "Mesutian"
  ribyah:0 "Ribyah"
+ maluki:0 "Maluki"
 
  pamkusean_group:0 "Pamkusean"
  ilikiomenoi:0 "Ilikiomenoi"
@@ -176,11 +178,14 @@
  povativi_group:0 "Povativi"
  absukhan:0 "Absukhan"
  boforian:0 "Boforian"
- srushtan:0 "Srusthan"
+ srushtan:0 "Srushtan"
 
  alatyai_group:0 "Alatyai"
  cirenii:0 "Cirenii"
  morasari:0 "Morasari"
+ warilasi:0 "Warilasi"
+ ramtasali:0 "Ramtasali"
+ xawarani:0 "Xawarani"
 
  bunelisuli_group:0 "Bunelisuli"
  baraguniis:0 "Baraguniis"
