--- a/localisation/countries_l_english.yml
+++ b/localisation/countries_l_english.yml
@@ -483,8 +483,8 @@
  CYR_ADJ:0 "Cyromeidian"
  MAM:0 "Mameria"
  MAM_ADJ:0 "Mamerian"
- CHR:0 "Charadied"
- CHR_ADJ:0 "Charadiedian"
+ CHR:0 "Charadeid"
+ CHR_ADJ:0 "Charadeidian"
  RID:0 "Ridirsi"
  RID_ADJ:0 "Ridirsian"
  CAN:0 "Canarih"
@@ -738,3 +738,5 @@
  SEE_ADJ:0 "Senevian"
  VAI:0 "Vazixan"
  VAI_ADJ:0 "Vazixani"
+ KAU:0 "Karunestan"
+ KAU_ADJ:0 "Karunestani"
