--- a/localisation/prov_names_l_english.yml
+++ b/localisation/prov_names_l_english.yml
@@ -1310,16 +1310,16 @@
  PROV1309:0 "1309"
  PROV1310:0 "1310"
  PROV1311:0 "1311"
- PROV1312:0 "1312"
+ PROV1312:0 "Uzwardan"
  PROV1313:0 "1313"
  PROV1314:0 "Asonam"
  PROV1315:0 "Zaoshai"
  PROV1316:0 "Tarthoz"
  PROV1317:0 "Handhânepat"
- PROV1318:0 "1318"
- PROV1319:0 "1319"
- PROV1320:0 "1320"
- PROV1321:0 "1321"
+ PROV1318:0 "Frayazad"
+ PROV1319:0 "Zergašahr"
+ PROV1320:0 "Qarum"
+ PROV1321:0 "Faramqars"
  PROV1322:0 "1322"
  PROV1323:0 "1323"
  PROV1324:0 "1324"
@@ -1479,13 +1479,13 @@
  PROV1478:0 "1478"
  PROV1479:0 "1479"
  PROV1480:0 "1480"
- PROV1481:0 "1481"
+ PROV1481:0 "Dakhal Bay"
  PROV1482:0 "1482"
  PROV1483:0 "1483"
  PROV1484:0 "1484"
- PROV1485:0 "1485"
+ PROV1485:0 "Dušagan Sea"
  PROV1486:0 "1486"
- PROV1487:0 "1487"
+ PROV1487:0 "Vazixani Coast"
  PROV1488:0 "1488"
  PROV1489:0 "1489"
  PROV1490:0 "1490"
@@ -1779,7 +1779,7 @@
  PROV1778:0 "1778"
  PROV1779:0 "1779"
  PROV1780:0 "1780"
- PROV1781:0 "1781"
+ PROV1781:0 "Wadagisik"
  PROV1782:0 "1782"
  PROV1783:0 "1783"
  PROV1784:0 "1784"
@@ -1803,8 +1803,8 @@
  PROV1802:0 "1802"
  PROV1803:0 "1803"
  PROV1804:0 "1804"
- PROV1805:0 "1805"
- PROV1806:0 "1806"
+ PROV1805:0 "Rafutal"
+ PROV1806:0 "Animastig"
  PROV1807:0 "1807"
  PROV1808:0 "1808"
  PROV1809:0 "1809"
@@ -1991,16 +1991,16 @@
  PROV1990:0 "Yamusap"
  PROV1991:0 "Anasagh"
  PROV1992:0 "Irith"
- PROV1993:0 "1993"
- PROV1994:0 "1994"
+ PROV1993:0 "Kunmarza"
+ PROV1994:0 "Ošmaran"
  PROV1995:0 "Suxram"
- PROV1996:0 "1996"
+ PROV1996:0 "Aqrah"
  PROV1997:0 "Fashafrax"
- PROV1998:0 "1998"
- PROV1999:0 "1999"
- PROV2000:0 "2000"
- PROV2001:0 "2001"
- PROV2002:0 "2002"
+ PROV1998:0 "Niyazahrag"
+ PROV1999:0 "Tarazenišahr"
+ PROV2000:0 "Babukabad"
+ PROV2001:0 "Azdeband"
+ PROV2002:0 "Doxatran"
  PROV2003:0 "Paraqazwi"
  PROV2004:0 "Qaraesma"
  PROV2005:0 "Mahyaqar"
@@ -2011,9 +2011,9 @@
  PROV2010:0 "2010"
  PROV2011:0 "Shadawah"
  PROV2012:0 "Nivoshothra"
- PROV2013:0 "2013"
+ PROV2013:0 "Sawsar"
  PROV2014:0 "2014"
- PROV2015:0 "2015"
+ PROV2015:0 "Xatmar"
  PROV2016:0 "2016"
  PROV2017:0 "2017"
  PROV2018:0 "2018"
@@ -2022,13 +2022,13 @@
  PROV2021:0 "2021"
  PROV2022:0 "2022"
  PROV2023:0 "2023"
- PROV2024:0 "2024"
- PROV2025:0 "2025"
- PROV2026:0 "2026"
- PROV2027:0 "2027"
- PROV2028:0 "2028"
+ PROV2024:0 "Šam"
+ PROV2025:0 "Wenagibuhr"
+ PROV2026:0 "Bahramodšahr"
+ PROV2027:0 "Mexagam"
+ PROV2028:0 "Magarox"
  PROV2029:0 "2029"
- PROV2030:0 "2030"
+ PROV2030:0 "Zayamar"
  PROV2031:0 "Sumawat"
  PROV2032:0 "2032"
  PROV2033:0 "2033"
@@ -2057,15 +2057,15 @@
  PROV2056:0 "2056"
  PROV2057:0 "2057"
  PROV2058:0 "2058"
- PROV2059:0 "2059"
- PROV2060:0 "2060"
- PROV2061:0 "2061"
+ PROV2059:0 "Karunabal"
+ PROV2060:0 "Wiyaharg"
+ PROV2061:0 "Karunabal"
  PROV2062:0 "2062"
  PROV2063:0 "2063"
  PROV2064:0 "2064"
  PROV2065:0 "2065"
  PROV2066:0 "2066"
- PROV2067:0 "2067"
+ PROV2067:0 "Karunabal"
  PROV2068:0 "2068"
  PROV2069:0 "2069"
  PROV2070:0 "2070"
@@ -2096,10 +2096,10 @@
  PROV2095:0 "2095"
  PROV2096:0 "2096"
  PROV2097:0 "2097"
- PROV2098:0 "2098"
+ PROV2098:0 "Budar"
  PROV2099:0 "2099"
- PROV2100:0 "2100"
- PROV2101:0 "2101"
+ PROV2100:0 "Mafid"
+ PROV2101:0 "Sapari"
  PROV2102:0 "2102"
  PROV2103:0 "2103"
  PROV2104:0 "2104"
@@ -2142,24 +2142,24 @@
  PROV2141:0 "2141"
  PROV2142:0 "2142"
  PROV2143:0 "2143"
- PROV2144:0 "2144"
- PROV2145:0 "2145"
- PROV2146:0 "2146"
+ PROV2144:0 "Andacah"
+ PROV2145:0 "Akardur"
+ PROV2146:0 "Paqz"
  PROV2147:0 "2147"
- PROV2148:0 "2148"
- PROV2149:0 "2149"
- PROV2150:0 "2150"
- PROV2151:0 "2151"
- PROV2152:0 "2152"
+ PROV2148:0 "Mazdesnish"
+ PROV2149:0 "Kišwar"
+ PROV2150:0 "Gazdum"
+ PROV2151:0 "Baraqhaz"
+ PROV2152:0 "Šagrabr"
  PROV2153:0 "2153"
- PROV2154:0 "2154"
- PROV2155:0 "2155"
+ PROV2154:0 "Gahbader"
+ PROV2155:0 "Urwazid"
  PROV2156:0 "2156"
- PROV2157:0 "2157"
- PROV2158:0 "2158"
- PROV2159:0 "2159"
- PROV2160:0 "2160"
- PROV2161:0 "2161"
+ PROV2157:0 "Amanawid"
+ PROV2158:0 "Gabrašahr"
+ PROV2159:0 "Maraqiz"
+ PROV2160:0 "Skawarid"
+ PROV2161:0 "Widazih"
  PROV2162:0 "2162"
  PROV2163:0 "2163"
  PROV2164:0 "2164"
@@ -2209,23 +2209,23 @@
  PROV2208:0 "2208"
  PROV2209:0 "2209"
  PROV2210:0 "2210"
- PROV2211:0 "2211"
+ PROV2211:0 "Dakhalbum"
  PROV2212:0 "2212"
  PROV2213:0 "2213"
  PROV2214:0 "2214"
- PROV2215:0 "2215"
- PROV2216:0 "2216"
- PROV2217:0 "2217"
- PROV2218:0 "2218"
- PROV2219:0 "2219"
+ PROV2215:0 "Dosibur"
+ PROV2216:0 "Daštarog"
+ PROV2217:0 "Aroxtar"
+ PROV2218:0 "Hamzasan"
+ PROV2219:0 "Randigur"
  PROV2220:0 "2220"
- PROV2221:0 "2221"
+ PROV2221:0 "Bešazarg"
  PROV2222:0 "2222"
  PROV2223:0 "2223"
- PROV2224:0 "2224"
- PROV2225:0 "2225"
- PROV2226:0 "2226"
- PROV2227:0 "2227"
+ PROV2224:0 "Drayabaz"
+ PROV2225:0 "Samadigar"
+ PROV2226:0 "Wastargal"
+ PROV2227:0 "Vazixan"
  PROV2228:0 "2228"
  PROV2229:0 "2229"
  PROV2230:0 "2230"
