flags and rulers

--- a/localisation/TD_02_decision_nations_l_english.yml
+++ b/localisation/TD_02_decision_nations_l_english.yml
@@ -93,3 +93,6 @@
 
  vinalion_nation_title:0 "Establish Vinalion @VIN"
  vinalion_nation_desc:0 ""
+
+ karunestan_nation_title:0 "Unite Karunestan @KAU"
+ karunestan_nation_desc:0 ""
