--- a/localisation/TD_03_missions_felder_l_english.yml
+++ b/localisation/TD_03_missions_felder_l_english.yml
@@ -1,24 +1,19 @@
 ﻿l_english:
- TD_Felder_Conquest_title:0 "Centralisation of Felder Lands"
- TD_Felder_Conquest_desc:0 ""
+ TD_felder_conquest_title:0 "Centralisation of Felder Lands"
+ TD_felder_conquest_desc:0 ""
 
- TD_Regional_Capital_title:0 "Foundation of Felderstadt"
- TD_Regional_Capital_desc:0 ""
+ TD_felder_felderstadt_title:0 "Foundation of Felderstadt"
+ TD_felder_felderstadt_desc:0 ""
 
- TD_Conquest_Bogiland_title:0 "Conquest of Bogiland"
- TD_Conquest_Bogiland_desc:0 ""
+ TD_felder_conquest_bogiland_title:0 "Conquest of Bogiland"
+ TD_felder_conquest_bogiland_desc:0 ""
 
- TD_Form_Felderia_title:0 "Unite Felderia"
- TD_Form_Felderia_desc:0 ""
+ TD_felderia_form_felderia_title:0 "Unite Felderia"
+ TD_felderia_form_felderia_desc:0 ""
  
- fld_minor_found_felderstadt_tt:0 "If §YFelderstadt§! doesn't exists, random province meeting the requirements will get"
- fld_minor_controls_cored_felderstadt_tt:0 "Owns core province: §YFelderstadt§!"
- fld_minor_conquered_felderstadt_tt:0 "\nIf §YFelderstadt§! already exists, then"
- fld_minor_move_capital_to_felderstadt_tt:0 "§YFelderstadt§! will become the new Capital"
+ felderstadt_already_exists_effect_tt:0 "§YFelderstadt§! will become the new Capital\nCenter of Trade level in §YFelderstadt§! is increased by §Y1§!"
  fld_minor_if_bogil_at_war_tt:0 "If we are at War with @BOG §YBogiland§!:"
  fld_minor_if_bogil_was_at_war_tt:0 "If we won a War with @BOG §YBogiland§!, or conquered 8 provinces with §YBogilish§! culture:"
- fld_minor_felderstadt_choose_trade_good_tt:0 "We will get an option to choose trade good in §YFelderstadt§!."
- fld_minor_controls_21dev_felderstadt_tt:0 "The city of §YFelderstadt§! must be our capital, and have atleast §Y21 development§!."
  TD_Felder_Forest_Tactics:0 "Forest Warfare"
  TD_Felder_Integrate_The_Kaposnicy:0 "Integration of the Kaposnicy"
  TD_Conqueror_of_Bogiland:0 "Conqueror of Bogiland"
@@ -27,7 +22,11 @@
  felderia.1.desc:0 "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.\nLorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.\nLorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."
  felderia.1.a:0 "Unite Felderia @FLD"
  felderia.1.b:0 "We cannot abandon our roots!"
- felderia.2.t:0 "Felderstadt and it's production"
+ felderia.2.t:0 "Foundation of Felderstadt"
  felderia.2.a:0 "Glass"
  felderia.2.b:0 "Cloth"
  felderia.2.c:0 "Paper"
+ felderia.2_tt:0 "Our new capital will be established and we will be able to change its trade good."
+ felderstadt_exists_no_tt:0 "Felderstadt does NOT exist"
+ is_felderstadt_tt:0 "Is Felderstadt"
+ felderstadt_has_been_not_founded_tt:0 "If Felderstadt has NOT been founded yet"
