--- a/localisation/TD_03_missions_saelian_l_english.yml
+++ b/localisation/TD_03_missions_saelian_l_english.yml
@@ -15,7 +15,7 @@
  generic_expand_the_realm_title:0 "Expand the Realm"
  generic_expand_the_realm_desc:0 ""
  generic_expand_the_realm_tt:0 "Gain permanent claim on every saelian province."
- TD_emperor_zealous_conquest:0 "Zelaous Conquest"
+ TD_emperor_zealous_conquest:0 "Zealous Conquest"
 
  generic_subdue_tetrarchy_title:0 "Subdue Tetrarchy"
  generic_subdue_tetrarchy_desc:0 ""
