auruvata ideas + nrb loc

--- a/localisation/TD_01_flavour_aqerb_l_english.yml
+++ b/localisation/TD_01_flavour_aqerb_l_english.yml
@@ -51,12 +51,19 @@
  narbonese_ideas_start:0 "Narbonese Traditions"
  narbonese_ideas_bonus:0 "Narbonese Ambition"
  idea_vinedos_reales:0 "Viñedos Reales"
+ idea_vinedos_reales_desc:0 "Cultural fascination with wine, inherited from the times of the Saelian Empire, has greatly influenced the economic situation of these lands. Many noble estates focus on producing solely wine to satisfy the endlessly growing demand amongst the nobility. These vineyards are so succesful, that even the royal family invests in building new estates in newly aquired lands."
  idea_bank_of_caytuna:0 "Bank of Caytuna"
+ idea_bank_of_caytuna_desc:0 "Many ill-considered investments in the western borderlands made by uneducated nobles ironically turn out better for the crown. Royal bank of Caytuna provides loans for anyone willing to invest into our new lands."
  idea_land_of_the_pious:0 "Land of the Pious"
+ idea_land_of_the_pious_desc:0 "At its core, the narbonese expansion is seen as a religious struggle rather than militaristic expansion. For the last thousand years saelian soldiers fought to protect the border against aqerbic heathens. It was always a matter of survival of the greater saelian community."
  idea_brothers_in_faith:0 "Brothers in Faith"
+ idea_brothers_in_faith_desc:0 "To maintain the stability of the realm it can't be build on dread. The fundamental pillar of society should be loyalty and trust. Strict societies will fall at any opportunity, but the feudal system of loyal hierarchy is eternal."
  idea_centralized_royal_domain:0 "Centralized Royal Domain"
+ idea_centralized_royal_domain_desc:0 "Centralization was a result of growing popularity of liemarianism which promoted ruler autocracy to distant themselves from the emperor. With this came a new time to Narbone - the power became centralized in the king, rather than distributed amongst the nobility."
  idea_beyond_the_ocean:0 "Beyond the Ocean"
+ idea_beyond_the_ocean_desc:0 "Stories of the new world spread from our enemies across the border. Riches beyond one's comprehension are in reach and for the taking to whoever gets to them first. Brave nobles and soldiers who fought against heathens in the homeland will now fight across the ocean to bring gold and treasures to the crown."
  idea_reforms_of_Manuel:0 "Manuelan Reforms"
+ idea_reforms_of_Manuel_desc:0 "After the brutal victory of Novoregnian forces against us, many lost faith in our ruler and the military. It had to be quickly adapted to a new system, much more modern and similar to the one used by our enemies, but instead of using light infantry as our main firepower, the artillery became the ruler of the battlefield."
 
  group_aqerbic_ideas:0 "Aqerbic Minor ideas"
  group_aqerbic_ideas_start:0 "Aqerbic Minor Traditions"
