--- a/localisation/TD_areas_l_english.yml
+++ b/localisation/TD_areas_l_english.yml
@@ -337,6 +337,6 @@
  dakhal_area:0 "Dakhal"
  sawdagun_area:0 "Sawdagun"
  samadar_area:0 "Samadar"
- senevasman:0 "Senevasman"
+ senevasman_area:0 "Senevasman"
  southern_tarascan_srea:0 "Southern Tarascan"
  garamarz_area:0 "Garamarz"
