--- a/localisation/TD_01_flavour_visparaya_l_english.yml
+++ b/localisation/TD_01_flavour_visparaya_l_english.yml
@@ -2,6 +2,20 @@
  fravasumi_ideas:0 "Fravasumi Ideas"
  fravasumi_ideas_start:0 "Fravasumi Traditions"
  fravasumi_ideas_bonus:0 "Fravasumi Ambitions"
+ fravasum_crossroad_of_empires:0 "Crossroad of Empires"
+ fravasum_crossroad_of_empires_desc:0 "City of Barzakhan, our capital, sits at the border between 2 great ancient civilizations - visparaya and hestan. Both of them historically clashed over the city to control the flow of trade to pamkusea and beyond. This struggle and international trade created a city filled with many cultures, religious and manners."
+ fravasum_merchant_conversion:0 "Merchant Conversion"
+ fravasum_merchant_conversion_desc:0 "Vispa language is not only the most spoken language in visparaya, but is also common in many important merchant cities across hestani and Maqitan basins. Being an auxiliary language, it allows our merchants to freely trade in distant lands and even work as missionaries, converting local urban populations to smoothen the trade even more."
+ fravasum_supplied_settlements:0 "Supplied Settlements"
+ fravasum_supplied_settlements_desc:0 "Historically most lands of fravasum consisted of underdeveloped desert, but thanks to our great trade income they are slowly becoming more significant and populated than ever. The most common approach to encouraging new settlers is to grant massive tax cuts in early days of settlements, hoping that the investments will pay itself back."
+ fravasum_hussen_guards:0 "Hussen Guard"
+ fravasum_hussen_guards_desc:0 "Every since people of hussestat converted to Rah Jadid, they were under oppression of Ehwitrawi kings. After the failure of the First Hussen Rebellion in 1432, many left their homeland to seek new life with hope to regain strength and take back their homeland. Many of rebellion's leaders turned to the wise Nusabat Darius for help, who gladly helped them in exchange for their service."
+ fravasum_hestani_connections:0 "Hestani Connections"
+ fravasum_hestani_connections_desc:0 "Deal with hussenites was not the first success of Fravasumi diplomacy. in XIII century we managed to establish trade deals with Sunbat city-states and aevadata of Warilas to circumvent high prices set by Mafidi republic, mostly on furs, slaves and horses."
+ fravasum_pemenian_trade:0 "Pemenian Trade"
+ fravasum_pemenian_trade_desc:0 "After the collapse of Bunelisuli Empire and the rise of Maqitan Piracy, there aren't many remaining trade routes with the far east. Nonetheless, goods still travel across the world, thanks to efforts of samadian and auruvatan traders. The flow of information cannot be severed this easily, not when we have a say in this."
+ fravasum_defend_the_land:0 "Defend the Land"
+ fravasum_defend_the_land_desc:0 "Once desolate wasteland is now seen as a diamond in the rough. All of our neighbors ready their armies to conquer us, before any other country tries to do the same, but we will not let them. We built this land and it will remain ours, forever."
 
  ahnoyasi_ideas:0 "Ahnoyasi Ideas"
  ahnoyasi_ideas_start:0 "Ahnoyasi Traditions"
