--- a/localisation/TD_areas_l_english.yml
+++ b/localisation/TD_areas_l_english.yml
@@ -225,6 +225,7 @@
  outer_isles_area:0 "Outer Isles"
  ithag_area:0 "Ithag"
  ainaich_area:0 "Ainaich"
+ lesser_ainaich_area:0 "Lesser ainaich"
  oilethudhian_coast_area:0 "Oilethudhian Coast"
  ethelnothdun_area:0 "Ethelnothdun"
  nabhin_area:0 "Nabhin"
@@ -300,6 +301,32 @@
  matservalis_area:0 "Matservalis"
  dashavastan_area:0 "Dashavastan"
  mankrigia_area:0 "Mankrigia"
+ lesser_gisia_area:0 "Lesser Gisia"
+ tagiban_area:0 "Tagiban"
+ chuvavir_area:0 "Chuvavir"
+ pirtavir_area:0 "Pirtavir"
+ zirvapasi_valley_area:0 "Zirvapasi Valley"
+ tarkos_area:0 "Tarkos"
+ kredeli_area:0 "Kredeli"
+ akhasper_area:0 "Akhasper" 
+ middle_timis_area:0 "Middle Timis"
+ markas_area:0 "Markas"
+ canarih_area:0 "Canarih"
+ ikunacia_area:0 "Ikunacia"
+ mkrvila_area:0 "Mkrvila"
+ luzidia_area:0 "Luzidia"
+ srushta_area:0 "Srushta"
+ boforia_area:0 "Boforia"
+ western_absukha_area:0 "Western Absukha"
+ eastern_absukha_area:0 "Eastern Absukha"
+ didibina_area:0 "Didibina"
+ kugenia_area:0 "Kugenia"
+ saugania_area:0 "Saugania"
+ sazugarat_area:0 "Sazugarat"
+ orkatul_area:0 "Orkatul"
+ osthia_area:0 "Oksthia"
+ visicia_area:0 "Visicia"
+ begeuvia_area:0 "Begeuvia"
 
  east_chantlian_islands_area:0 "East Chantlian Islands"
 
@@ -340,3 +367,11 @@
  senevasman_area:0 "Senevasman"
  southern_tarascan_srea:0 "Southern Tarascan"
  garamarz_area:0 "Garamarz"
+
+ enettiste_area:0 "Enettiste"
+ seke_area:0 "Seke"
+ hattura_area:0 "Hattura"
+ astallen_area:0 "Astallen"
+ 
+ khuduliin_area:0 "Khuduliin"
+ mesutiin_area:0 "Mesutiin"
