--- a/localisation/prov_names_l_english.yml
+++ b/localisation/prov_names_l_english.yml
@@ -90,7 +90,7 @@
  PROV89:0 "South Al-Bahriyah"
  PROV90:0 "Zaynashar"
  PROV91:0 "Abdahisn"
- PROV92:0 "Prov92"
+ PROV92:0 "Vakosetasi"
  PROV93:0 "Salian Sea"
  PROV94:0 "Ninlilatu"
  PROV95:0 "Sijjazur"
@@ -235,66 +235,66 @@
  PROV234:0 "Uzkolian Strait"
  PROV235:0 "Tummic Sea"
  PROV236:0 "Lumiariia"
- PROV237:0 "237"
+ PROV237:0 "Allist"
  PROV238:0 "Aarnijärvi"
  PROV239:0 "Kuthiekka"
  PROV240:0 "Rantahelmi"
- PROV241:0 "241"
- PROV242:0 "242"
- PROV243:0 "243"
+ PROV241:0 "Oivoissatu"
+ PROV242:0 "Kollä"
+ PROV243:0 "Kavoisalli"
  PROV244:0 "Metsälinn"
  PROV245:0 "Auringonkukka"
- PROV246:0 "246"
- PROV247:0 "247"
+ PROV246:0 "Inänisol"
+ PROV247:0 "Voinenutisi"
  PROV248:0 "Klaampi"
- PROV249:0 "249"
- PROV250:0 "250"
- PROV251:0 "251"
- PROV252:0 "252"
- PROV253:0 "253"
- PROV254:0 "254"
- PROV255:0 "255"
+ PROV249:0 "Tuku"
+ PROV250:0 "Tavoittal"
+ PROV251:0 "Netä"
+ PROV252:0 "Itäjo"
+ PROV253:0 "Ineko"
+ PROV254:0 "Tikene"
+ PROV255:0 "Ksiva"
  PROV256:0 "256"
- PROV257:0 "257"
+ PROV257:0 "Hänei"
  PROV258:0 "258"
- PROV259:0 "259"
- PROV260:0 "260"
- PROV261:0 "261"
+ PROV259:0 "Tätuttänenai"
+ PROV260:0 "Enoletä"
+ PROV261:0 "Tälatami"
  PROV262:0 "Aamusatama"
- PROV263:0 "263"
- PROV264:0 "264"
- PROV265:0 "265"
- PROV266:0 "266"
- PROV267:0 "267"
- PROV268:0 "268"
- PROV269:0 "269"
- PROV270:0 "270"
- PROV271:0 "271"
- PROV272:0 "272"
- PROV273:0 "273"
- PROV274:0 "274"
- PROV275:0 "275"
- PROV276:0 "276"
- PROV277:0 "277"
- PROV278:0 "278"
- PROV279:0 "279"
- PROV280:0 "280"
- PROV281:0 "281"
- PROV282:0 "282"
- PROV283:0 "283"
+ PROV263:0 "Ettonellisehän"
+ PROV264:0 "Enuttanat"
+ PROV265:0 "Stattin"
+ PROV266:0 "Kuli"
+ PROV267:0 "Sitaa"
+ PROV268:0 "Llasi"
+ PROV269:0 "Oinetä"
+ PROV270:0 "Lesisi"
+ PROV271:0 "Seva"
+ PROV272:0 "Alloisa"
+ PROV273:0 "Karalampi"
+ PROV274:0 "Ksitaa"
+ PROV275:0 "Onastelut"
+ PROV276:0 "Inänis"
+ PROV277:0 "Tastal"
+ PROV278:0 "Aimin"
+ PROV279:0 "Uttall"
+ PROV280:0 "Lilitälevataik"
+ PROV281:0 "Enaistole"
+ PROV282:0 "Isineliteka"
+ PROV283:0 "Silettenut"
  PROV284:0 "284"
  PROV285:0 "285"
- PROV286:0 "286"
- PROV287:0 "287"
- PROV288:0 "288"
- PROV289:0 "289"
- PROV290:0 "290"
- PROV291:0 "291"
- PROV292:0 "292"
- PROV293:0 "293"
- PROV294:0 "294"
+ PROV286:0 "Lisiin"
+ PROV287:0 "Talisai"
+ PROV288:0 "Tälis"
+ PROV289:0 "Jasenolitä"
+ PROV290:0 "Mustapuu"
+ PROV291:0 "Nellett"
+ PROV292:0 "Kuke"
+ PROV293:0 "Olitäsin"
+ PROV294:0 "Lestal"
  PROV295:0 "295"
- PROV296:0 "296"
+ PROV296:0 "Seva"
  PROV297:0 "Rõugemaa"
  PROV298:0 "Käbala"
  PROV299:0 "Imantspils"
@@ -928,7 +928,7 @@
  PROV927:0 "Nedrola"
  PROV928:0 "Onfione"
  PROV929:0 "Misorenne"
- PROV930:0 "930"
+ PROV930:0 "Margesee"
  PROV931:0 "Ganlonna"
  PROV932:0 "Belenno"
  PROV933:0 "Bagenni"
@@ -974,7 +974,7 @@
  PROV973:0 "973"
  PROV974:0 "974"
  PROV975:0 "975"
- PROV976:0 "976"
+ PROV976:0 "Kesepar"
  PROV977:0 "Balsahra Oasis"
  PROV978:0 "Qadi'madina" #city old
  PROV979:0 "Sabir" #saber
@@ -1017,7 +1017,7 @@
  PROV1016:0 "1016"
  PROV1017:0 "Fawud"
  PROV1018:0 "Erithynai"
- PROV1019:0 "1019"
+ PROV1019:0 "Jääsalmiin"
  PROV1020:0 "Pataravel"
  PROV1021:0 "Sazgharanodaris"
  PROV1022:0 "1022"
@@ -1093,32 +1093,32 @@
  PROV1092:0 "1092"
  PROV1093:0 "1093"
  PROV1094:0 "1094"
- PROV1095:0 "1095"
+ PROV1095:0 "Markomer"
  PROV1096:0 "Fawud"
  PROV1097:0 "1097"
  PROV1098:0 "1098"
  PROV1099:0 "1099"
  PROV1100:0 "Qupatra"
- PROV1101:0 "1101"
+ PROV1101:0 "Pelegta"
  PROV1102:0 "1102"
  PROV1103:0 "1103"
- PROV1104:0 "1104"
- PROV1105:0 "1105"
+ PROV1104:0 "Albajar"
+ PROV1105:0 "Nutarban"
  PROV1106:0 "1106"
  PROV1107:0 "1107"
- PROV1108:0 "1108"
- PROV1109:0 "1109"
- PROV1110:0 "1110"
- PROV1111:0 "1111"
- PROV1112:0 "1112"
- PROV1113:0 "1113"
+ PROV1108:0 "Malhna"
+ PROV1109:0 "Dantalt"
+ PROV1110:0 "Mazarf"
+ PROV1111:0 "Tana"
+ PROV1112:0 "Ederban"
+ PROV1113:0 "Pagar"
  PROV1114:0 "1114"
- PROV1115:0 "1115"
- PROV1116:0 "1116"
- PROV1117:0 "1117"
- PROV1118:0 "1118"
- PROV1119:0 "1119"
- PROV1120:0 "1120"
+ PROV1115:0 "Gabrig"
+ PROV1116:0 "Galahar"
+ PROV1117:0 "Kotorat"
+ PROV1118:0 "Huwat"
+ PROV1119:0 "Migellat"
+ PROV1120:0 "Pusmar"
  PROV1121:0 "1121"
  PROV1122:0 "1122"
  PROV1123:0 "1123"
@@ -1187,7 +1187,7 @@
  PROV1186:0 "1186"
  PROV1187:0 "1187"
  PROV1188:0 "1188"
- PROV1189:0 "1189"
+ PROV1189:0 "Miskarab"
  PROV1190:0 "Lanta"
  PROV1191:0 "Deis Nua"
  PROV1192:0 "1192"
@@ -1304,7 +1304,7 @@
  PROV1303:0 "Yetzan"
  PROV1304:0 "Brakhuti"
  PROV1305:0 "Maghalak"
- PROV1306:0 "1306"
+ PROV1306:0 "Wadibax"
  PROV1307:0 "1307"
  PROV1308:0 "1308"
  PROV1309:0 "1309"
@@ -2226,8 +2226,8 @@
  PROV2225:0 "Samadigar"
  PROV2226:0 "Wastargal"
  PROV2227:0 "Vazixan"
- PROV2228:0 "2228"
- PROV2229:0 "2229"
+ PROV2228:0 "Gramat"
+ PROV2229:0 "Rasriqiha"
  PROV2230:0 "2230"
  PROV2231:0 "2231"
  PROV2232:0 "2232"
