--- a/localisation/TD_areas_l_english.yml
+++ b/localisation/TD_areas_l_english.yml
@@ -259,6 +259,7 @@
  qarasami_peninsula_area:0 "Qarasami Peninsula"
  frankras_area:0 "Frankras"
  north_tarascan_area:0 "Northern Tarascan"
+ southern_tarascan_area:0 "Southern Tarascan"
  saenaya_area:0 "Saenaya"
  kadah_area:0 "Kadah"
 
@@ -324,9 +325,10 @@
  saugania_area:0 "Saugania"
  sazugarat_area:0 "Sazugarat"
  orkatul_area:0 "Orkatul"
- osthia_area:0 "Oksthia"
+ oksthia_area:0 "Oksthia"
  visicia_area:0 "Visicia"
  begeuvia_area:0 "Begeuvia"
+ macotia_area:0 "Macotia"
 
  east_chantlian_islands_area:0 "East Chantlian Islands"
 
@@ -365,7 +367,6 @@
  sawdagun_area:0 "Sawdagun"
  samadar_area:0 "Samadar"
  senevasman_area:0 "Senevasman"
- southern_tarascan_srea:0 "Southern Tarascan"
  garamarz_area:0 "Garamarz"
 
  enettiste_area:0 "Enettiste"
