--- a/localisation/prov_names_adj_l_english.yml
+++ b/localisation/prov_names_adj_l_english.yml
@@ -834,7 +834,7 @@
  PROV_ADJ833:0 "Bhariloi"
  PROV_ADJ834:0 "Chaibhir"
  PROV_ADJ835:0 "Seceratians"
- PROV_ADJ836:0 "Western Ggrub Sea"
+ PROV_ADJ836:0 "Western Ghrub Sea"
  PROV_ADJ837:0 "Gittinora"
  PROV_ADJ838:0 "Taranne"
  PROV_ADJ839:0 "Baratalio"
