--- a/localisation/prov_names_l_english.yml
+++ b/localisation/prov_names_l_english.yml
@@ -834,7 +834,7 @@
  PROV833:0 "Bhariloi"
  PROV834:0 "Chaibhir"
  PROV835:0 "Seceratians"
- PROV836:0 "Western Ggrub Sea"
+ PROV836:0 "Western Ghrub Sea"
  PROV837:0 "Gittinora"
  PROV838:0 "Taranne"
  PROV839:0 "Baratalio"
@@ -1023,7 +1023,7 @@
  PROV1022:0 "1022"
  PROV1023:0 "Amnodos"
  PROV1024:0 "Fawud"
- PROV1025:0 "1025"
+ PROV1025:0 "Meros"
  PROV1026:0 "1026"
  PROV1027:0 "mumtalakat" #estate
  PROV1028:0 "Mazar Eyina" #Tomb Eyina
@@ -1104,7 +1104,7 @@
  PROV1103:0 "1103"
  PROV1104:0 "Albajar"
  PROV1105:0 "Nutarban"
- PROV1106:0 "1106"
+ PROV1106:0 "Germusal"
  PROV1107:0 "1107"
  PROV1108:0 "Malhna"
  PROV1109:0 "Dantalt"
@@ -1258,7 +1258,7 @@
  PROV1257:0 "1257"
  PROV1258:0 "Dasarali"
  PROV1259:0 "Dasarali"
- PROV1260:0 "1260"
+ PROV1260:0 "Malagosans"
  PROV1261:0 "1261"
  PROV1262:0 "1262"
  PROV1263:0 "1263"
@@ -1266,13 +1266,13 @@
  PROV1265:0 "1265"
  PROV1266:0 "Palofos"
  PROV1267:0 "1267"
- PROV1268:0 "1268"
- PROV1269:0 "1269"
- PROV1270:0 "1270"
- PROV1271:0 "1271"
- PROV1272:0 "1272"
- PROV1273:0 "1273"
- PROV1274:0 "1274"
+ PROV1268:0 "Duxaz"
+ PROV1269:0 "Xrizamat"
+ PROV1270:0 "Pernalos"
+ PROV1271:0 "Kolondax"
+ PROV1272:0 "Fozayt"
+ PROV1273:0 "Farnak"
+ PROV1274:0 "Kataruz"
  PROV1275:0 "Mostqaveli"
  PROV1276:0 "Kurkutal"
  PROV1277:0 "Mostqaveli"
@@ -1320,7 +1320,7 @@
  PROV1319:0 "Zergašahr"
  PROV1320:0 "Qarum"
  PROV1321:0 "Faramqars"
- PROV1322:0 "1322"
+ PROV1322:0 "Qarosan"
  PROV1323:0 "1323"
  PROV1324:0 "1324"
  PROV1325:0 "1325"
@@ -1398,9 +1398,9 @@
  PROV1397:0 "1397"
  PROV1398:0 "1398"
  PROV1399:0 "Barzakhan"
- PROV1400:0 "1400"
- PROV1401:0 "1401"
- PROV1402:0 "1402"
+ PROV1400:0 "Burdan"
+ PROV1401:0 "Huniyagar"
+ PROV1402:0 "Kistanzar"
  PROV1403:0 "1403"
  PROV1404:0 "Matah"
  PROV1405:0 "Varaqsham"
@@ -1954,7 +1954,7 @@
  PROV1953:0 "1953"
  PROV1954:0 "1954"
  PROV1955:0 "Parahaw"
- PROV1956:0 "1956"
+ PROV1956:0 "Hasrat"
  PROV1957:0 "Aparati"
  PROV1958:0 "Taradhat"
  PROV1959:0 "Baraqhaz"
@@ -2018,10 +2018,10 @@
  PROV2017:0 "2017"
  PROV2018:0 "2018"
  PROV2019:0 "2019"
- PROV2020:0 "2020"
+ PROV2020:0 "Meleqars"
  PROV2021:0 "2021"
- PROV2022:0 "2022"
- PROV2023:0 "2023"
+ PROV2022:0 "Hitraan"
+ PROV2023:0 "Maraxot"
  PROV2024:0 "Šam"
  PROV2025:0 "Wenagibuhr"
  PROV2026:0 "Bahramodšahr"
@@ -2037,7 +2037,7 @@
  PROV2036:0 "2036"
  PROV2037:0 "2037"
  PROV2038:0 "2038"
- PROV2039:0 "2039"
+ PROV2039:0 "Hitraan"
  PROV2040:0 "2040"
  PROV2041:0 "2041"
  PROV2042:0 "2042"
